# Artie

./: .gitignore  CONTRIBUTING.md  README.md
artie-common/audio-node/: README.md
artie-common/controller-node/: README.md
artie-common/drivers/controller-node-led/: leddaemon.py
artie-common/drivers/example-sensor/: Dockerfile  README.md
artie-common/drivers/example-sensor/src/: datastream.py  main.py
artie-common/drivers/mouth-and-eyebrows/: Dockerfile
artie-common/drivers/mouth-and-eyebrows/src-eyebrows/: ebcommon.py  fw.py  lcd.py  led.py  main.py  servo.py
artie-common/drivers/mouth-and-eyebrows/src-mouth/: fw.py  lcd.py  led.py  main.py
artie-common/drivers/reset-mcu-driver/src/: main.py
artie-common/firmware/: README.md
artie-common/firmware/mouth/test/: test.py
artie-common/vision-node/: README.md
artie00/: artie00.yml  bom.md
docs/architecture/: artie-overview.md  kubernetes-architecture.md
docs/building/: building-artie-main.md
docs/contributing/: artie-cli-contributions.md  artie-tool-contributions.md  artie-workbench-contributions.md  chart-contributions.md  development-environment.md  driver-contributions.md  electronic-design.md  firmware-contributions.md  library-contributions.md  mechanical-design.md  overall-architecture.md  pull-request-process.md  release-process.md  simulator-contributions.md  yocto-image-contributions.md
docs/out-of-the-box/: admin-server.md  compute-server.md  deploy-artie-reference-stack.md  getting-started.md  teleop.md
docs/specifications/: CANProtocol.md  ErrorHandling.md  RPCSchema.md
docs/specifications/service-interfaces/: README.md
framework/: artie-tool.py  requirements.txt
framework/ardk/base-image/: Dockerfile
framework/ardk/libraries/artie-can/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.test  README.md  build_and_test_c.ps1  launch.json.example  pyproject.toml  run_tests.py  setup.py
framework/ardk/libraries/artie-can/examples/: debug_main.c  simple_example.py
framework/ardk/libraries/artie-can/include/: artie_can.h  artie_can_backends.h  artie_can_userdefs.h  backend.h  backend_mcp2515.h  backend_tcp.h  circular_buffer.h  context.h  err.h  frame.h  rtacp.h
framework/ardk/libraries/artie-can/include/backend/: backend_mcp2515.h  backend_mcp2515_context.h  backend_tcp.h  driver_mcp2515.h
framework/ardk/libraries/artie-can/include/protocol/: rtacp.h  rtacp_context.h
framework/ardk/libraries/artie-can/include/util/: log.h  translationlayer.h
framework/ardk/libraries/artie-can/src/: artie_can_backend_mcp2515.c  artie_can_backend_mock.c  artie_can_backend_mock_tcp.c  artie_can_backend_socketcan.c  artie_can_bwacp.c  artie_can_core.c  artie_can_psacp.c  artie_can_rpcacp.c  artie_can_rtacp.c  artie_can_utils.c  backend_mcp2515.c  backend_tcp.c  circular_buffer.c  rtacp.c
framework/ardk/libraries/artie-can/src/artie_can/: __init__.py
framework/ardk/libraries/artie-can/src/backend/: backend_mcp2515.c  backend_tcp.c  driver_mcp2515.c
framework/ardk/libraries/artie-can/src/protocol/: rtacp.c
framework/ardk/libraries/artie-can/src/util/: circular_buffer.c  translationlayer.c
framework/ardk/libraries/artie-can/tests/: CMakeLists.txt  README.md  __init__.py  conftest.py  test_bwacp.py  test_core.py  test_psacp.py  test_rpcacp.py  test_rtacp.c  test_rtacp.py  util.c  util.h
framework/ardk/libraries/artie-can/tests/unity/: unity.c  unity.h  unity_internals.h
framework/ardk/libraries/artie-gpio/: setup.py
framework/ardk/libraries/artie-service-client/: README.md  pyproject.toml  setup.py
framework/ardk/services/artie-api-server/: Dockerfile  README.md
framework/ardk/services/artie-api-server/docs/: api-eyebrows.md  api-interface-driver.md  api-interface-mcu.md  api-interface-service.md  api-interface-statusled.md  api-logging.md  api-mouth.md
framework/ardk/services/artie-api-server/src/: main.py  run.sh
framework/ardk/services/artie-data-collector/: README.md
framework/ardk/services/artie-pubsub-broker/: Dockerfile  README.md  entrypoint.sh
framework/ardk/services/artie-rpc-broker/: Dockerfile  README.md
framework/ardk/services/artie-rpc-broker/src/: cachemonitor.py  main.py  service.py  test_server.py
framework/ardk/services/artie-service-broker/: Dockerfile  README.md
framework/ardk/services/artie-service-broker/src/: cachemonitor.py  main.py  service.py  test_server.py
framework/ardk/services/telemetry/: README.md
framework/artietool/: README.md  common.py  docker.py  kube.py
framework/artietool/compose-files/: compose.can.yaml  compose.driver-eyebrows.yaml  compose.driver-mouth.yaml  compose.logging.yaml  compose.metrics.yaml  compose.pubsub.yaml  compose.telemetry.yaml  launch-manual.py
framework/artietool/deploy-files/artie-base/: README.md  values.yaml
framework/artietool/infrastructure/: deploy_job.py  docker_build_job.py  docker_compose_test_suite_job.py  hardware_test_job.py  result.py  run.py  single_container_cli_suite_job.py  single_container_pytest_suite_job.py  single_container_sanity_suite_job.py  task.py  task_importer.py  test_job.py
framework/artietool/install/: install.py  uninstall.py
framework/artietool/tasks/: README.md
framework/artietool/tasks/build-tasks/: artie-can-test-image.yaml
framework/artietool/tasks/deploy-tasks/: custom.yaml
framework/artietool/test/: test.py
framework/cli/: README.md  pyproject.toml  setup.py
framework/cli/artiecli/: cli.py  common.py
framework/cli/artiecli/modules/: can.py  display.py  driver.py  eyebrows.py  imu.py  mcu.py  mouth.py  service.py  servo.py  status_led.py
framework/cli/test/: Dockerfile  integration_test_profile.json  unit_test_profile.json
framework/daemons/artie-admind/: install.sh  k3s-persistant-volume-local.yaml  k3s-persistant-volume-nfs.yaml
framework/daemons/artie-computed/: install.sh
framework/workbench/: README.md
framework/workbench/workbench/comms/: artie_serial.py  base.py  tool.py
framework/workbench/workbench/gui/: colors.py
framework/workbench/workbench/util/: error.py  log.py
(+112 files in other folders)
