[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "artiecli"
readme = "README.md"
version = "0.0.1"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["artie-tooling>=0.0.1", "urllib3<2.0.0", "requests>=2.28.0"]

[project.optional-dependencies]
remote = ["rpyc==6.0.1"]

[project.scripts]
artie-cli = "artiecli.cli:main"
