[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artie-can"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.10"
license = "MIT"
description = "Artie CAN library for communication over CAN bus"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
artie_can = ["lib/*.so"]
